2026-02-20T02:37:05Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/22209038044 # 883
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-20
* notice: last 14d: unq all: 8 9
* notice: prev accum: outdated-unq outdated-all / unq all: 449 626 / 460 637
* notice: next accum: outdated-unq outdated-all / unq all: 449 626 / 457 635
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-19T02:42:24Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/22166385358 # 882
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-19
* notice: last 14d: unq all: 10 11
* notice: prev accum: outdated-unq outdated-all / unq all: 448 624 / 456 633
* notice: next accum: outdated-unq outdated-all / unq all: 449 626 / 460 637
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-21 2026-01-22 2026-01-23 2026-01-24] / []

2026-02-18T02:43:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/22124369345 # 881
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-18
* notice: last 14d: unq all: 8 9
* notice: prev accum: outdated-unq outdated-all / unq all: 448 624 / 455 631
* notice: next accum: outdated-unq outdated-all / unq all: 448 624 / 456 633
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-16T02:43:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/22048337503 # 879